--- a/css/style.css
+++ b/css/style.css
@@ -399,6 +399,8 @@ section.article div.overlay {
   border-bottom: 1px solid #DDDDDD;
   position: absolute;
   top: 0;
+  display: block;
+  opacity: 0.6;
 }
 section.article div.featured-image {
   vertical-align: middle;
@@ -483,6 +485,9 @@ section.article article.post .video-container embed {
   left: 0;
   width: 100%;
   height: 100%;
+}
+div.overlay{
+  display:none;
 }
 
 /**
